Address more comments and add a test for message dispatches